# quack

./: .envrc  .gitignore  CLAUDE.md  lefthook.yml  prek.toml  pyproject.toml  quack.yaml
.bin/: lefthook
.github/workflows/: ci.yml
.superset/: config.json
src/quack/: __main__.py  cache.py  cache_test.py  cli.py  config.py  conftest.py  consts.py  db.py  exceptions.py  runtime.py  runtime_test.py  spec.py  spec_test.py
src/quack/models/: base.py  command.py  command_test.py  dependency.py  dependency_test.py  script.py  script_test.py  target.py  target_test.py
src/quack/services/: command_manager.py  command_manager_test.py
src/quack/utils/: archiver.py  archiver_test.py  checksummer.py  checksummer_test.py  ci_environment.py  cloud.py  formatter.py  metadata.py  oss.py
